prevent resize on collapse

--- a/src/components/ApplicationPage/PDFViewer.css
+++ b/src/components/ApplicationPage/PDFViewer.css
@@ -5,7 +5,7 @@
 
 .ant-form .ant-list {
     margin-top: 25px;
-    height: 450px;
+    height: 430px;
 }
 
 .list-container {
